--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <redis.clients.version>2.6.1</redis.clients.version>
         <jackson.version>1.9.13</jackson.version>
         <log4j.version>1.2.16</log4j.version>
+        <guava.version>20.0</guava.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -45,6 +46,11 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
