--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <redis.clients.version>2.6.1</redis.clients.version>
         <jackson.version>1.9.13</jackson.version>
         <log4j.version>1.2.16</log4j.version>
+        <slf4j.version>1.5.8</slf4j.version>
         <guava.version>20.0</guava.version>
         <junit.version>4.12</junit.version>
     </properties>
@@ -51,6 +52,16 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
